Fix Java compatibility: Replace threadId() with getId()
Co-authored-by: HungLo2020 <159678011+HungLo2020@users.noreply.github.com>